-- ProBuilder 2.4.0b6 (r3061) -

# Features
	- When selecting a texture-grouped face in UV editor, show an indicator of all faces in group.
	- New dark background in UV editor for Unity light skin users.
	- Improve performance when selecting objects with large vertex counts.

# Bug Fixes
	- Allow `V` key usage when not in Element mode.
	- Fix regression where instantiated objects would not respect ProGrids alignment.
	- Fix null ref errors when welding or collapsing vertices.
	- When double-clicking a texture grouped face in UV editor, select the entire group.
	- Fix regression that caused performance spikes when deleting or instantiating objects.
	- When detaching faces to a new object, copy all of that object's properties.
	- Add Undo support to Shape creation tool.
	- Fix bug where running Flip Normals from the Menu would not immediately update the mesh graphics.

-- ProBuilder 2.4.0b5 (r3049) -

# Features
	- Show color name in vertex tools instead of RGBA info.

# Bug Fixes
	- Improve the performance of Planar Mapping manual Uvs.
	- Create Material data asset path if it doesn't exist.
	- Fix bug where dragging UVs in Unity 5 would sometimes corrupt the mesh.
	- Disable Continuous Baking when dragging elements or making continuous changes to the mesh, fixing corruption issues in Unity 5.
	- Fix occasional erroneous error message when subdividing faces.
	- Fix null ref error when Auto UV panel is open with nothing selected.

-- ProBuilder 2.4.0b4 (r3042) -

# Bug Fixes
	- Fix null ref when continuing UVs.
	- Support Undo in UV Editor Auto panel.
	- Support Undo for Push to Grid events from ProGrids.
	- Refresh all objects in scene after running `Fix Missing Script References`.
	- Fix `Index out of range` errors when subdividing, triangulating, and setting pivot.

-- ProBuilder 2.4.0b3 (r3028) -

# Bug Fixes
	- Fix crash when running `Fix Missing Script References` in Unity 5.0.0b18 (big thanks to Michael N!)


-- ProBuilder 2.4.0b2 (r3017) -

# Features