@@ -2,6 +2,7 @@
 
 # Features
 	- When selecting a texture-grouped face in UV editor, show an indicator of all faces in group.
+	- Improve performance when modifying geometry & UVs in Unity 5.
 	- New dark background in UV editor for Unity light skin users.
 	- Improve performance when selecting objects with large vertex counts.
 
